--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-bushcaster",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "grunt task for bushcasting.. erm... i mean cachebusting",
   "main": "Gruntfile.js",
   "scripts": {
@@ -46,6 +46,9 @@
     "grunt-contrib-nodeunit": "~0.2.2"
   },
   "peerDependencies": {
+    "grunt": "~0.4.1"
+  },
+  "dependencies": {
     "grunt": "~0.4.1"
   }
 }
