Update peer dependency for Grunt >= 1.0
See /http://gruntjs.com/blog/2016-02-11-grunt-1.0.0-rc1-released#peer-dependencies

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "grunt-contrib-nodeunit": "~0.2.2"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": ">=0.4.1"
   },
   "dependencies": {
     "grunt": "~0.4.1"
